--- a/app.css
+++ b/app.css
@@ -1,9 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
 
+html {
+    overflow-x: hidden;
+}
+
 .nav {
     font-family: 'Montserrat', sans-serif;
     padding: 20px 0;
     background-color: #3498db0e;
+}
+
+#title {
+    font-family: 'Montserrat', sans-serif;
 }
 
 .nav.row {
@@ -86,4 +94,103 @@ header h2 {
     font-size: 18px;
     top: 2%;
     left: 6.5%;
+}
+
+/*  Website    */
+
+.navbar-brand {
+    padding: 20px 0;
+}
+
+.navbar-brand h1 {
+    font-size: 25px;
+    text-transform: uppercase;
+}
+
+.nav-link h3 {
+    font-size: 16px;
+    text-transform: uppercase;
+}
+
+.testimonials-image {
+    width: 100%;
+    height: 100%;
+}
+
+.pic1,
+.pic2 {
+    width: 100%;
+    height: 700px;
+}
+
+.categories {
+    padding: 50px 0;
+}
+
+.new-arrivals {
+    padding: 50px 0;
+}
+
+.new-arrivals h1 {
+    font-size: 32px;
+    text-align: center;
+    font-weight: 700;
+    margin: 20px 0;
+}
+
+.web-footer {
+    background-color: #3498db0e;
+    padding: 70px 0;
+}
+
+.web-footer h2 {
+    font-size: 25px;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 30px;
+}
+
+.social {
+    margin-top: 20px;
+}
+
+.content p {
+    width: 80%;
+}
+
+.social a {
+    font-size: 30px;
+    text-decoration: none;
+    margin-right: 20px;
+}
+
+.place,
+.phone,
+.email {
+    display: flex;
+    align-items: center;
+    padding: 10px 0;
+}
+
+.place span,
+.phone span,
+.email span {
+    font-size: 20px;
+    margin-right: 20px;
+}
+
+.web-footer .text {
+    font-size: 16px;
+}
+
+.web-footer form input {
+    font-size: 16px;
+    padding: 7px 15px;
+    border-radius: 40px;
+    border: 2px solid #2B83EA;
+}
+
+.web-footer form input:active,
+.web-footer form input:focus {
+    outline: none;
 }
